# super-chan

./: .gitignore  CHANGELOG.md  CODE_STYLE.md  README.md  design.md  hello.py  pyproject.toml  test_richlog_wrap.py  test_terminal_ui.py  test_text_wrap.py
config/: user template.toml
config/panels/: example_command.yaml
config/procedure/: echo.toml  summerise_past_email.toml
docs/: command_schema.md  core_programmatic_executor.md  design.md  terminal_ui.md  ui_internals.md
docs/modules/: README.md
docs/modules/anime/: anime.md
docs/modules/command/: commands.md
docs/modules/core/: architecture.md
docs/modules/extensibility/: design.md
docs/modules/style/: anime.md
docs/modules/super_program/: super_program.md
docs/modules/ui/: base_ui.md  io_payload.md  io_router.md
scripts/: run_terminal_ui.py  temp_command.py  test_build_zai_llm.py
superchan/anime/: __init__.py  llm_stylizer.py  middleware.py
superchan/config/panels/: example_panel.yaml
superchan/core/: __init__.py  engine.py  executors.py  transport.py
superchan/core/procedures/: __init__.py  echo.py
superchan/super_program/email/: __init__.py  models.py  utils.py
superchan/ui/: base_ui.py  io_payload.py  io_router.py  run_terminal_ui.py
superchan/ui/push/: __init__.py  base_push_ui.py  serverchan_ui.py
superchan/ui/terminal/: __init__.py  command_provider.py  output_dispatcher.py  terminal_ui.py  (+1 more)
superchan/utils/: config.py  llm_providers.py  procedure_registry.py
tests/: test_anime_llm_stylizer.py  test_anime_middleware.py  test_procedure_summerise_past_email.py
(+11 files in other folders)
