[project]
name = "superchan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.2",
    "pywin32>=311",
    "textual>=6.1.0",
    "zai-sdk>=0.0.3.5",
]

[tool.setuptools.packages.find]
include = ["superchan"]
exclude = ["config*"]